Getting the new MANO products

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button id ="btn">Click Me</button>
     <script src="scripts/scripts.js"></script>
 </body>
 </html>
