--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <button id ="btn">Click Me</button>
+    <div id="container" class="product_container">
+        <img src="" alt="item image">
+        <p id="desc">item name</p>
+    </div>
     <script src="scripts/scripts.js"></script>
 </body>
 </html>
