Commenting the code

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <button id ="btn">Click Me</button>
+    <!-- Button to visit the MANO website -->
+    <button class="btn" , id ="btn">Visit MANO</button>
+    <!-- Product cotainer -->
     <div id="container" class="product_container">
+        <!-- product image -->
         <img src="" alt="item image">
+        <!-- product name -->
         <p id="desc">item name</p>
     </div>
     <script src="scripts/scripts.js"></script>
